fixed the nav bar on firefox android

--- a/docs/includes/assets/css/styles.css
+++ b/docs/includes/assets/css/styles.css
@@ -93,6 +93,7 @@ body{
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: space-between;
+	z-index: 2;
 }
 .header_sub_bar {
 	padding: 0;
@@ -209,7 +210,7 @@ body{
 	align-items: center;
 	justify-content: center;
 
-	z-index: 2;
+	z-index: 10;
 	width: 100%;
 	height: 100%;
 	max-height: 100%;
@@ -246,7 +247,7 @@ body{
 	margin-bottom: 20px;
 
 	flex: 0 1 auto;
-	z-index: 4; /* above the spinner */
+	z-index: 12; /* above the spinner */
 	background-color: rgba(0,0,0,0.0);
 	width: 100%;
 	height: auto;
@@ -305,7 +306,7 @@ body{
 	font: 300 16px/1 'Quicksand', sans-serif;
 }
 .spinner{
-	z-index: 3;
+	z-index: 11;
 	position: fixed;
 	top: 0%;
 	left: 0%;
@@ -331,7 +332,7 @@ body{
 }
 /*menu thingy*/
 #contextual_menu{
-	z-index: 3;
+	z-index: 13;
 	position: fixed;
 	top: 100%;
 	left: 100%;
